sandbox/output
HikerTest.java:49: error: ';' expected
    public void testNegative() throw RuntimeException  {
                              ^
1 error
